add melle-weapons. fix swagger url
