# api/storage/api-docs/api-docs.json
@@ -11,7 +11,7 @@
     },
     "servers": [
         {
-            "url": "/api",
+            "url": "",
             "description": "Основной сервер API"
         }
     ],
@@ -201,8 +201,7 @@
         "/api/static/armor": {
             "get": {
                 "tags": [
-                    "Static",
-                    "Armor"
+                    "Static"
                 ],
                 "summary": "Получить всю броню",
                 "operationId": "1b0004f50e389078b37c32bcd144260a",
@@ -244,8 +243,7 @@
         "/api/static/armor/{id}": {
             "get": {
                 "tags": [
-                    "Static",
-                    "Armor"
+                    "Static"
                 ],
                 "summary": "Получить броню по ID",
                 "operationId": "55c18c5f55694e41311a8969d268c3d8",
@@ -308,6 +306,131 @@
                     }
                 }
             }
+        },
+        "/api/static/melee-weapon": {
+            "get": {
+                "tags": [
+                    "Static"
+                ],
+                "summary": "Получить всё мили-оружие",
+                "operationId": "752a1270d38c35fc5df728e41398d53a",
+                "responses": {
+                    "200": {
+                        "description": "Список мили-оружия",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "title": {
+                                                "type": "string",
+                                                "example": "Plasma Sword"
+                                            },
+                                            "vs_MK1": {
+                                                "type": "string",
+                                                "example": "+2"
+                                            },
+                                            "vs_MK2": {
+                                                "type": "string",
+                                                "example": "+1"
+                                            },
+                                            "vs_MK3": {
+                                                "type": "string",
+                                                "example": "Полностью"
+                                            },
+                                            "vs_MK4": {
+                                                "type": "string",
+                                                "example": "Половина"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/static/melee-weapon/{id}": {
+            "get": {
+                "tags": [
+                    "Static"
+                ],
+                "summary": "Получить мили-оружие по ID",
+                "operationId": "b7bb04659c726c7af3adcbe9daec5433",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID оружия",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "example": 1
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Данные мили-оружия",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "id": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "title": {
+                                            "type": "string",
+                                            "example": "Plasma Sword"
+                                        },
+                                        "vs_MK1": {
+                                            "type": "string",
+                                            "example": "+2"
+                                        },
+                                        "vs_MK2": {
+                                            "type": "string",
+                                            "example": "+1"
+                                        },
+                                        "vs_MK3": {
+                                            "type": "string",
+                                            "example": "Полностью"
+                                        },
+                                        "vs_MK4": {
+                                            "type": "string",
+                                            "example": "Половина"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Оружие не найдено",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "melee weapon not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "tags": [
@@ -318,10 +441,6 @@
         {
             "name": "Static",
             "description": "Static"
-        },
-        {
-            "name": "Armor",
-            "description": "Armor"
         }
     ]
 }
